--- a/store-server/store/orders/templates/orders/success.html
+++ b/store-server/store/orders/templates/orders/success.html
@@ -1,10 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'users/base.html' %}
+
+{% block content %}
+    <main>
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-lg-5">
+                        <div class="card shadow-lg border-0 rounded-lg mt-5">
+                            <div class="card-header">
+                                <h3 class="text-center font-weight-light my-4">Спасибо за заказ!</h3>
+                            </div>
+                            <div class="card-body text-center">
+                                <h4>
+                                    Ваш заказ успешно сформирован.
+                                </h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
+{% endblock %}
